Bug 1383589 - Process post traversal whenever StyleDocument() or StyleDocumentForThrottledAnimationFlush() returns true. r=emilio

The test case in this patch freezes without this fix.

MozReview-Commit-ID: 6Rb9XmtAmpM

--HG--
extra : rebase_source : 9a68482c77d5e77ed5733f757ed3ec021834ba2f